[package]
name = "bake"
version = "1.0.0"
edition = "2021"

[dependencies]
bat = "0.19.0"
bimap = "0.6.2"
binrw = "0.8.4"
clap = { version = "3.1.0", features = ["derive"] }
csv = "1.1.6"
hex = { version = "0.4.3", features = ["serde"] }
hexyl = "0.9.0"
serde = { version = "1", features = ["derive"] }
serialport = "4.0.1"
